최신 변동 사항 반영
https://github.com/openNAMU/openNAMU

--- a/lang/en-US.json
+++ b/lang/en-US.json
@@ -62,6 +62,7 @@
     "delete_bottom_text" : "Delete textarea bottom notice",
     "revert_bottom_text" : "Revert textarea bottom notice",
     "warning_restart" : "Restarting... Press Refresh (F5)",
+    "random_list" : "Random document(s) list",
 
     "_comment_": "Common",
     "data": "Data",
@@ -744,7 +745,7 @@
     "topic_long_error": "The discussions topic must not exceed 256 characters.",
     "email_error": "No one has this email.",
     "regex_error": "There is an error in the regular expression.",
-    "decument_404_error": "This document does not exist.",
+    "document_404_error": "This document does not exist.",
     "func_404_error": "This URL does not have the correct function.",
     "fast_edit_error": "You can edit another document after this period (Second(s)): ",
     "too_many_dec_error": "This feature is not supported because there are too many documents.",
@@ -783,7 +784,7 @@
     "challenge_title_tenth_contribute": "Boys, Be Ambitious!",
     "challenge_info_tenth_contribute": "Make your 10th contribution<br><br>Reward: 📝 title and 1000 exp",
     "challenge_title_hundredth_contribute": "Knowledge is power.",
-    "challenge_info_hundredth_contribute": "Make your 100th contribution<br><br>보상: 🖊️ title and 3000 exp",
+    "challenge_info_hundredth_contribute": "Make your 100th contribution<br><br>Reward: 🖊️ title and 3000 exp",
     "challenge_title_thousandth_contribute": "Rome wasn't built in a day.",
     "challenge_info_thousandth_contribute": "Make your 1000th contribution<br><br>Reward: 🏅 title and 10000 exp",
     "challenge_title_first_discussion": "Truth is generally the best vindication against slander.",
