--- a/lang/ko-KR.json
+++ b/lang/ko-KR.json
@@ -710,5 +710,7 @@
     "delete_bottom_text" : "삭제 하단 문구",
     "revert_bottom_text" : "되돌리기 하단 문구",
     "warning_restart" : "재시작 중... 새로고침(F5)를 눌러주세요",
-    "random_list" : "랜덤 문서 목록"
+    "random_list" : "랜덤 문서 목록",
+    "test" : "테스트",
+    "email_test" : "이메일 전송 테스트"
 }
